Added RGB functionality

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" async></script>
 </head>
 <body>
     <h1>Etch a Sketch</h1>
+    <div class="choices">
+        <button id="bw">Black & White</button>
+        <button id="rgb">RGB</button>
+    </div>
     <div class="container"></div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
